<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_settings">

        <SwitchPreferenceCompat
            app:key="floating_widget_enabled"
            app:title="@string/enable_floating_widget"
            app:summary="@string/enable_floating_widget_summary"
            app:defaultValue="true" />

        <SwitchPreferenceCompat
            app:key="swipe_up_enabled"
            app:title="@string/enable_swipe_up"
            app:summary="@string/enable_swipe_up_summary"
            app:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_settings">

        <SwitchPreferenceCompat
            app:key="dark_mode_enabled"
            app:title="@string/dark_mode"
            app:summary="@string/dark_mode_summary"
            app:defaultValue="false" />

        <ListPreference
            app:key="layout_type"
            app:title="@string/layout_type"
            app:summary="@string/layout_type_summary"
            app:entries="@array/layout_entries"
            app:entryValues="@array/layout_values"
            app:defaultValue="0" />

        <SwitchPreferenceCompat
            app:key="show_system_apps"
            app:title="@string/show_system_apps"
            app:summary="@string/show_system_apps_summary"
            app:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/widget_settings">

        <ListPreference
            app:key="widget_size"
            app:title="@string/widget_size"
            app:summary="@string/widget_size_summary"
            app:entries="@array/size_entries"
            app:entryValues="@array/size_values"
            app:defaultValue="1" />

        <Preference
            app:key="reset_widget_position"
            app:title="@string/reset_widget_position"
            app:summary="@string/reset_widget_position_summary" />

    </PreferenceCategory>

</PreferenceScreen> 